--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,6 @@ body{
   margin: 0;}
 
 
-
 /* main */
 .container{
   height: inherit;
@@ -52,27 +51,18 @@ main{
   margin-left: 0;
   margin-right: 0;}
 
-.site-kg-main{
-  background-color: rgb(233, 230, 245);
-  display:grid;
-  grid-template-columns: 100% auto;
-  width: inherit;
-  min-height: 100%;
-  max-height: auto;
-  padding: 0 20px 40px 20px;
-  margin: 0}
 
 .site-title{
   font-size: 1.6em;}
 
   /* Content */
-.site-home-content, .site-kg-content, .site-fl-content, .site-ab-content{
+.site-home-content, .site-kg-content, .site-fl-content, .site-re-content{
   width: auto;
   height:auto;
-  padding-top: 2em;
+  padding-top: 10%;
   padding-bottom: 5em;
-  padding-left: 3%;
-  padding-right: 3%;
+  padding-left: 5%;
+  padding-right: 5%;
   /*overflow-y: scroll;*/}
 
 .intro {
@@ -82,123 +72,6 @@ main{
 .icon{
   height: 25px;
   width: 25px;}
-
-/*knowledge Base*/
-.knowledge-card{  
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  height: auto;
-  max-height: inherit;
-  gap: 3em;
-  margin-top: 3em;}
-  
-.card{
-  border-radius: 4px;
-  background-color: rgb(253, 253, 255);
-  color:rgb(152, 149, 158);
-  min-height: 3em;
-  width: inherit;
-  height: 300px;
-  margin-top: 0em;
-  margin-bottom: 0em;
-  padding: 8px;
-  overflow: hidden;}
-
-.card > .card-title{
-  display: grid;
-  height: inherit;
-  grid-template-rows: auto auto;
-  gap: 30px;
-  
-  overflow: hidden;}
-
-.card-title:hover {
-  text-decoration:none;}
-
-.card-title > .card-cover-image{
-  height:180px;
-  z-index: 1;
-  overflow: hidden;
-  padding: 0em 0em 0em 0em;}
-
-.card-title > .card-cover-title{
-  background-color: rgb(253, 253, 255);
-  text-align: center;
-  height:80px;
-  z-index: 2;
-  overflow: hidden;
-  padding: 0em 0em 0em 0em;
-  margin: 0em 0em 0em 0em;}
-
-.card-title h4{
-  margin: 0em 0em 0em 0em;}
-
-.cover-image{
-  border-radius: 3px;
-  min-width: auto;
-  min-height: auto;}
-
-  /*human language*/
-  .site-kg-content h3{
-    margin-top: 3em;
-    margin-bottom: 1em;}
-
-  .cantonese-vowels{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 2em;
-    align-items: flex-start;
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;}
-  
-  .cantonese-vowels table{
-    border-style:dotted;
-    border-color: ivory;
-    text-align: center;
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;}
-
-  .cantonese-consonants{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 2em;
-    align-items: flex-start;
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;}
-
-  .cantonese-consonants table{
-    border-style:dotted;
-    border-color: ivory;
-    text-align: center;
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;}
-
-  .cantonese-tones{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 2em;
-    align-items: flex-start;
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;}
-
-  .cantonese-tones table{
-    border-style:dotted;
-    border-color: ivory;
-    text-align: center;
-    padding: 0em 0em 0em 0em;
-    margin: 0em 0em 0em 0em;}
-
-  /*Fishing*/
-  .main-headline{
-    text-align: center;
-    height: inherit;
-    padding: 0em 2em 0em 2em;}
-
-  .main-headline > .headline-image{
-    width: 600px;
-    align-items: center;
-    margin: 0em 0em 0em 0em;}
-
 
 
 /*back to top*/
