--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,7 @@ main{
   background-color: rgb(255, 255, 255);
   position: relative;
   width: auto;
-  height: auto;
+  height: 100%;
   min-height: 95%;
   padding: 0 20px 40px 20px;
   margin: 0;}
@@ -63,7 +63,7 @@ main{
 .site-re-content{
   width: auto;
   height: auto;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   line-height: 1.5em;
   padding-top: 10vw;
   padding-bottom: 5vw;
