--- a/css/index.css
+++ b/css/index.css
@@ -24,7 +24,7 @@ body{
   font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
   line-height: 1;
   display: grid;
-  grid-template-rows: 3em auto;
+  grid-template-rows: 50px auto;
   width: 100%;
   min-width: 100%;
   height: 100%;
@@ -39,6 +39,8 @@ body{
   height: inherit;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Title */
@@ -70,7 +72,7 @@ main{
   padding-bottom: 5vw;
   padding-left: 5vw;
   padding-right: 5vw;
-  /*overflow-y: scroll;*/}
+  }
   
 
 /*back to top*/
