--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,8 @@ img{max-width:100%}
 
 /* The main scrollbar */
 ::-webkit-scrollbar {
-  width: 1vh; /* width of the entire scrollbar */
+  background: transparent;
+  width: 5px; /* width of the entire scrollbar */
 }
 
 /* Track */
