--- a/css/index.css
+++ b/css/index.css
@@ -56,7 +56,7 @@ body{
   font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
   line-height: 1;
   display: grid;
-  grid-template-rows: 50px auto;
+  grid-template-rows: 50px 1fr;
   width: 100%;
   min-width: 100%;
   height: 100%;
