--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,7 @@ body{
   /*background-color: rgb(191, 180, 211);*/
   color: #313b3f;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
-  font-size: 1.6rem;line-height: 1.6em;font-weight: 400;font-style:normal;letter-spacing:0;
+  font-size: 1.6rem;line-height: 1.7em;font-weight: 400;font-style:normal;letter-spacing:0;
   line-height: 1;
   display: grid;
   grid-template-rows: 50px 1fr;
@@ -90,25 +90,57 @@ main{
 
 
 .site-title{
-  font-size: 1.6em;}
+  font-size: 1.6em;
+  padding: 15px 0 8px 0;}
 
   /* Content */
 .site-home-content, 
 .site-kg-content, .site-hl-content,
 .site-fl-content, 
 .site-re-content{
+  max-width: 1500px;
   width: auto;
   height: auto;
   font-size: 1.6rem;
-  line-height: 1.5em;
-  padding-top: 10vw;
+  line-height: 1.7em;
+  padding-top: 80px;
   padding-bottom: 5vw;
   padding-left: 5vw;
   padding-right: 5vw;
   }
   
 
+h1, h2, h3, h4, h5 {
+    font-weight: 500;
+    line-height: 2rem;
+    padding: 0;
+    margin: 0;
+}
+
+li, p, a {
+    font-weight: 300;
+    text-align: justify;
+    hyphens: auto;
+    color:rgb(68, 68, 68);
+    margin: 0;
+}
+
 /*back to top*/
 .to-top {
   width: 30px;
   height: 30px;}
+
+@media screen and (max-width: 1000px) {
+  main{
+    padding: 0 3% 40px 3%;
+    margin: 0;
+  }
+
+  .site-home-content, 
+  .site-kg-content, .site-hl-content,
+  .site-fl-content, 
+  .site-re-content{
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+}
